--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,20 @@ editor:
   family: Holmes
 - given: Tie-Yan
   family: Liu
-title: Asian Conference on Machine Learning
-email: ''
-description: Asian Conference on Machine Learning, Hong Kong
+title: Proceedings of Machine Learning Research
+description: |
+  Asian Conference on Machine Learning
+    Held in Hong Kong on 20-22 November 2015
+
+  Published as Volume 45 by the Proceedings of Machine Learning Research on 25 February 2016.
+
+  Volume Edited by:
+    Geoffrey Holmes
+    Tie-Yan Liu
+
+  Series Editors:
+    Neil D. Lawrence
+    Mark Reid
 url: http://proceedings.mlr.press
 baseurl: "/v45"
 twitter_username: mlresearch
@@ -33,6 +44,7 @@ permalink: "/:title.html"
 github:
   edit: true
   repository: v45
+email: ''
 conference:
   name: Asian Conference on Machine Learning
   url: http://acml-conf.org/2015/
