--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,13 @@ series: Proceedings of Machine Learning Research
 id: ACML2015
 month: 0
 abstract: ''
+tex_title: 
+title: Proceedings of Machine Learning Research
 editor:
 - given: Geoffrey
   family: Holmes
 - given: Tie-Yan
   family: Liu
-title: Proceedings of Machine Learning Research
 description: |
   Asian Conference on Machine Learning
     Held in Hong Kong on 20-22 November 2015
