--- a/_config.yml
+++ b/_config.yml
@@ -15,15 +15,13 @@ layout: proceedings
 series: Proceedings of Machine Learning Research
 id: ACML2015
 month: 0
-abstract: ''
-tex_title: 
-title: Proceedings of Machine Learning Research
 cycles: false
 editor:
 - given: Geoffrey
   family: Holmes
 - given: Tie-Yan
   family: Liu
+title: Proceedings of Machine Learning Research
 description: |
   Asian Conference on Machine Learning
     Held in Hong Kong on 20-22 November 2015
@@ -40,7 +38,7 @@ description: |
 date_str: 20--22 Nov
 url: http://proceedings.mlr.press
 baseurl: "/v45"
-twitter_username: mlresearch
+twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
 permalink: "/:title.html"
@@ -52,6 +50,7 @@ display:
     bibtex: true
     endnote: true
     apa: true
+    ris: true
   comments: false
 email: ''
 conference:
@@ -67,3 +66,4 @@ analytics:
     tracking_id: UA-92432422-1
 # Site settings
 # Auto generated from v45.bib
+---
