--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ sections:
   title: Accepted Papers
 layout: proceedings
 series: Proceedings of Machine Learning Research
+issn: 1938-7228
 id: ACML2015
 month: 0
 cycles: false
@@ -41,8 +42,11 @@ baseurl: "/v45"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+plugins:
+- jekyll-remote-theme
+remote_theme: lawrennd/proceedings
 permalink: "/:title.html"
-github:
+ghub:
   edit: true
   repository: v45
 display:
@@ -65,6 +69,6 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
-# Auto generated from v45.bib
----
+# Original source:  /Users/neil/mlresearch/bibtex.bib
