Update URL in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ description: |
     Neil D. Lawrence
     Mark Reid
 date_str: 20--22 Nov
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 author:
   name: PMLR
 baseurl: "/v45"
